# 2025_I_AV_Teensy

./: .gitignore  .gitmodules  CMakeLists.txt  Client.cpp  Client.h  README.md  RpiReceiver  SDHandler.cpp  SDHandler.h  Sensors.cpp  Sensors.h  drone_control.ino  json.ino  log.ino  main_code_teensy.ino  outputs.ino  prj.conf  readme.md  remote.ino  sd_card.ino  sensors.ino  test_sdcard.ino  test_sensors.ino  uart.ino  utils.ino
calibration/accelerometer/: accelerometer.ino
calibration/accelerometer_sampler/: accelerometer_sampler.ino
calibration/moment_test/: Tester.cpp  log.ino  moment_test.ino  remote.ino
calibration/servos/: servos.ino
calibration/thrust_test/: Tester.cpp  thrust_test.ino
client_example_code/: Client.ino  RpiReceiver.cpp  TestCode.cpp
example_uart_code/: Transmit.cpp
examples/client_example_code/: Client_integrated.ino
god/: GOD.h
inc/: Controller.h  DroneController.h  PID.h  SetpointSelection.h  State.h  Vec3.h
integrated_sensor_test/: Sensors.cpp  integrated_sensor_test.ino
lib/: Client.h  Sensors.h
lib/Client/: Client.cpp  Client.h
lib/Client/client_example_code/: Client.ino  SUM.md  TestCode.cpp
lib/Client/examples/: Client.ino
lib/Sensors/: Sensors.h
lib/Sensors/examples/: test_sensors.ino
lib/Sensors/test_sensors/: test_sensors.ino
lib/utils/: bno_utils.cpp  bno_utils.h  imu_utils.cpp  imu_utils.h  library copy.properties  utils.h
log/: move.sh
non_integrated_sensor_test/: Sensors.cpp  Sensors.h  non_integrated_sensor_test.ino
receive_control_data/: receive_control_data.ino
servos/: ServoController.cpp  ServoController.h  servo_usage.cpp
src/: Controller.cpp  PID.cpp  SetpointSelection.cpp  god.h  main.c  main.cpp  teensy_main.ino
teensy_main_code/: Client.cpp  Sensors.cpp
test/: ControllerTest.cpp  integrated_sensor_test.ino
test/inc/: matplotlibcpp.h
test/matlab_runs/: att_run_1.csv  att_run_latest_with_p.csv  latest_altitude_run.csv  pos_run_1.csv  vert_pos_run.csv
test_sensors/: test_sensors.ino
test_sensors_delayed/: Sensors.cpp  Sensors.h  logging.py  sensor_data.csv  sensor_data_ahem1.csv  test_sensors_2_copy.ino
